--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 <center>
     <h1>Research assignments</h1>
     <big>
-        <p> Business research assignment: https:\\jarzis-hossain.github.io\HTML-1\business-research.html </p>
+        <a href="https:\\jarzis-hossain.github.io\HTML-1\business-research.html">Business research assignment on tracing the Supply Chain of a Chocolate Bar
+        </a>
     </big>
 </center>
 
