Index structure Fixed

--- a/index.html
+++ b/index.html
@@ -3,23 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Assignment Market</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f5f5f5;
+            margin: 0;
+            padding: 0;
+        }
+        .header {
+            text-align: center;
+            margin-top: 20px;
+        }
+        h1 {
+            margin: 20px 0;
+        }
+        p {
+            font-size: 18px;
+            color: #555;
+            text-align: center;
+        }
+        hr {
+            border: 1px solid #ccc;
+            margin: 20px 0;
+        }
+        ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            text-align: center;
+        }
+        li {
+            margin: 10px 0;
+            font-size: 16px;
+        }
+        a {
+            color: #007BFF;
+            text-decoration: none;
+            transition: color 0.3s;
+        }
+        a:hover {
+            color: #0056b3;
+        }
+    </style>
 </head>
 <body>
-    
-
-    <center><h1>Welcome to Assignment market</h1></center>
-    <br><hr><br>
-    <center><big><p>This website is made for helping students to do Assignments</p></big></center>
-<br><br>
-<center>
-    <h1>Research assignments</h1>
-    <big>
-        <a href="https:\\jarzis-hossain.github.io\HTML-1\business-research.html">Business research assignment on tracing the Supply Chain of a Chocolate Bar
-        </a>
-    </big>
-</center>
-
-
+    <div class="header">
+        <h1>Welcome to Assignment Market</h1>
+        <p>This website is designed to assist students with assignments</p>
+    </div>
+    <hr>
+    <div class="assignments">
+        <center><h1>Research Assignments</h1></center>
+        <ul>
+            <li><a href="https://jarzis-hossain.github.io/HTML-1/business-research.html" target="_blank">Business Studies: Tracing the Supply Chain of a Chocolate Bar</a></li>
+        </ul>
+    </div>
+    <hr>
+    <div class="projects">
+        <center><h1>Project Based Learning</h1></center>
+        <ul>
+            <li><a href="https://jarzis-hossain.github.io/HTML-1/business-pbl.html" target="_blank">Project Title</a></li>
+        </ul>
+    </div>
 </body>
 </html>
