--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
         </ul>
     </div>
     <hr>
-    <div class="projects">
+    <!-- <div class="projects">
         <center><h1>Project Based Learning</h1></center>
         <ul>
             <li><a href="https://jarzis-hossain.github.io/HTML-1/business-pbl.html" target="_blank">Project Title</a></li>
         </ul>
-    </div>
+    </div> -->
 </body>
 </html>
