--- a/index.html
+++ b/index.html
@@ -48,10 +48,13 @@
     </style>
 </head>
 <body>
+    <link rel="icon" type="image/png" href="path/to/your/Georgan.jpg">
     <div class="header">
         <h1>Welcome to Assignment Market</h1>
         <p>This website is designed to assist students with assignments</p>
     </div>
+    <hr>
+    <center><img src="Georgan.jpg" alt="Welcome Image" width="1100" height="550"></center>
     <hr>
     <div class="assignments">
         <center><h1>Research Assignments</h1></center>
@@ -59,7 +62,6 @@
             <li><a href="https://jarzis-hossain.github.io/HTML-1/business-research.html" target="_blank">Business Studies: Tracing the Supply Chain of a Chocolate Bar</a></li>
         </ul>
     </div>
-    <hr>
     <!-- <div class="projects">
         <center><h1>Project Based Learning</h1></center>
         <ul>
