--- a/index.html
+++ b/index.html
@@ -48,18 +48,19 @@
     </style>
 </head>
 <body>
-    <link rel="icon" type="image/png" href="path/to/your/Georgan.jpg">
+    <link rel="icon" type="image/png" href="images/logo.jpg">
     <div class="header">
         <h1>Welcome to Assignment Market</h1>
         <p>This website is designed to assist students with assignments</p>
     </div>
     <hr>
-    <center><img src="Georgan.jpg" alt="Welcome Image" width="1100" height="550"></center>
+    <center><img src="images/Georgan.jpg" alt="Welcome Image" width="1100" height="550"></center>
     <hr>
     <div class="assignments">
         <center><h1>Research Assignments</h1></center>
         <ul>
-            <li><a href="https://jarzis-hossain.github.io/HTML-1/business-research.html" target="_blank">Business Studies: Tracing the Supply Chain of a Chocolate Bar</a></li>
+            <li><a href="business-research.html" target="_blank">Business Studies: Tracing the Supply Chain of a Chocolate Bar</a></li>
+            <li><a href="biology-research.html" target="_blank">Biology: Brain Size & Intelligence</a></li>
         </ul>
     </div>
     <!-- <div class="projects">
