--- a/index.html
+++ b/index.html
@@ -63,11 +63,12 @@
             <li><a href="biology-research.html" target="_blank">Biology: Brain Size & Intelligence</a></li>
         </ul>
     </div>
-    <!-- <div class="projects">
+    <hr>
+    <div class="projects">
         <center><h1>Project Based Learning</h1></center>
         <ul>
-            <li><a href="https://jarzis-hossain.github.io/HTML-1/business-pbl.html" target="_blank">Project Title</a></li>
+            <li><a href="https://jarzis-hossain.github.io/HTML-1/business-pbl.html" target="_blank">Reviving the Retail Titan: Strategic Approaches for H&M's Resurgence in a Competitive</a></li>
         </ul>
-    </div> -->
+    </div>
 </body>
 </html>
