--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div class="projects">
         <center><h1>Project Based Learning</h1></center>
         <ul>
-            <li><a href="https://jarzis-hossain.github.io/HTML-1/business-pbl.html" target="_blank">Reviving the Retail Titan: Strategic Approaches for H&M's Resurgence in a Competitive</a></li>
+            <li><a href="business-PBL.html" target="_blank">Reviving the Retail Titan: Strategic Approaches for H&M's Resurgence in a Competitive</a></li>
         </ul>
     </div>
 </body>
