Computer-Science research

--- a/index.html
+++ b/index.html
@@ -61,13 +61,14 @@
         <ul>
             <li><a href="business-research.html" target="_blank">Business Studies: Tracing the Supply Chain of a Chocolate Bar</a></li>
             <li><a href="biology-research.html" target="_blank">Biology: Brain Size & Intelligence</a></li>
+            <li><a href="computer-research.html">Computer-Science: Hexadecimal: Practical Applications, Advantages, and Limitations in Real-World Contexts</a></li>
         </ul>
     </div>
     <hr>
     <div class="projects">
         <center><h1>Project Based Learning</h1></center>
         <ul>
-            <li><a href="business-PBL.html" target="_blank">Reviving the Retail Titan: Strategic Approaches for H&M's Resurgence in a Competitive</a></li>
+            <li><a href="business-PBL.html" target="_blank">Business: Reviving the Retail Titan: Strategic Approaches for H&M's Resurgence in a Competitive</a></li>
         </ul>
     </div>
 </body>
