--- a/business-PBL.html
+++ b/business-PBL.html
@@ -56,8 +56,7 @@
 </head>
 <body>
     <h4><a href="index.html">Home</a></h4>
-    <h1>Reviving the Retail Titan: Strategic Approaches for H&M's Resurgence in a Competitive</h1><hr>
-    <hr>
+    <h1>Reviving the Retail Titan: Strategic Approaches for H&M's Resurgence in a Competitive Market</h1><hr>
     <div class="container">
         <h3>Introduction</h3>
         <p>In the ever-evolving world of fashion and retail, industry dynamics are constantly shifting. The retail landscape, marked by its fierce competition and changing consumer preferences, has witnessed the rise and fall of various retail giants. One such company, Hennes & Mauritz, commonly known as H&M, has recently encountered challenging times in its pursuit of market supremacy. As fast-fashion competitors like Mango, Zara, and others continue to thrive and expand, H&M finds itself at a critical juncture in its business journey. This research assignment endeavors to investigate the core issues that have contributed to H&M's decline and identify strategies that can potentially lead the company back to prosperity. By delving into the factors behind H&M's recent struggles and by analyzing the successful strategies employed by its competitors, we aim to provide a comprehensive understanding of the path forward for H&M. As we embark on this journey to resurrect H&M's success story, it is imperative to recognize the significance of timely and well-informed decisions in a dynamic and highly competitive industry. The next sections of this research assignment will delve deeper into the analysis, provide insights, and lay out actionable strategies for H&M's resurgence in the fashion retail market.</p>
