--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             <li><a href="business-research.html" target="_blank">Business Studies: Tracing the Supply Chain of a Chocolate Bar</a></li>
             <li><a href="biology-research.html" target="_blank">Biology: Brain Size & Intelligence</a></li>
             <li><a href="computer-research.html">Computer-Science: Hexadecimal: Practical Applications, Advantages, and Limitations in Real-World Contexts</a></li>
+            <li><a href="economics-research.html">Qatar's Environmental Renaissance: Forging a Sustainable Legacy</a></li>
         </ul>
     </div>
     <hr>
