--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <center><h1>Project Based Learning</h1></center>
         <ul>
             <li><a href="business-PBL.html" target="_blank">Business: Reviving the Retail Titan: Strategic Approaches for H&M's Resurgence in a Competitive</a></li>
-            <li><a href="economics-research.html">Qatar's Environmental Renaissance: Forging a Sustainable Legacy</a></li>
+            <li><a href="economics-pbl.html">Qatar's Environmental Renaissance: Forging a Sustainable Legacy</a></li>
         </ul>
     </div>
 </body>
