--- a/Card.html
+++ b/Card.html
@@ -47,7 +47,7 @@
 
 <body>
     <div class="parent">
-        <img class="sheep" src="Sucide-sheep.jpg" alt="ID image" height="230px" width="350px">
+        <img class="sheep" src="images/Sucide-sheep.jpg" alt="ID image" height="230px" width="350px">
         <ul class="list1">
             <li>Nature</li>
             <li>Lake</li>
