--- a/jamal.html
+++ b/jamal.html
@@ -150,7 +150,7 @@
 	</header>
 	<div class="folio">
 		<header><h1>I'am a </h1></header>
-		<img class="jamal" src="image\jamal.png">
+		<img class="jamal" src="images\jamal.png">
 	</div>
 </body>
 </html>
