--- a/yaman.html
+++ b/yaman.html
@@ -5,16 +5,71 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yaman's Secrets</title>
     <style>
-        a {
-            display: block;
-            padding: 20px;
+        body {
+            margin: 24px;
+            padding: 24px;
+            background-color: aquamarine;
+            font-family: Arial, sans-serif;
+        }
+
+        .box {
+            border: 1px solid black;
+            background-color: aliceblue;
+            border-radius: 24px;
+            padding: 24px;
+            max-width: 600px;
+            margin: 24px auto;
+            box-shadow: 25px 25px 25px rgba(255, 75, 222, 0.211);
+        }
+
+        h2 {
+            text-align: center;
+            color: #333;
+        }
+
+        .box-list {
+            display: flex;
+            flex-wrap: wrap;
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            justify-content: center;
+        }
+
+        .box-list li {
+            margin: 10px;
+        }
+
+        .box-list a {
+            display: inline-block;
+            padding: 12px 18px;
+            background-color: lightseagreen;
+            color: white;
+            border-radius: 12px;
+            text-decoration: none;
+            transition: background-color 0.3s ease;
+        }
+
+        .box-list a:hover {
+            background-color: darkslategray;
         }
     </style>
 </head>
 <body>
-    <a href="images/Jannat.png">Jannat</a>
-    <a href="images/zaynab1.png">Zaynab 1</a>
-    <a href="images/zaynab2.png">Zaynab 2</a>
-    <a href="images/zaynab.png">Zaynab</a>
+    <div class="box">
+        <h2>Yaman's Chats</h2>
+        <ul class="box-list">
+            <li><a href="images/Jannat.png">Jannat</a></li>
+            <li><a href="images/zaynab1.png">Zaynab 1</a></li>
+            <li><a href="images/zaynab2.png">Zaynab 2</a></li>
+            <li><a href="images/zaynab.png">Zaynab_GF</a></li>
+        </ul>
+    </div>
+    <div class="box">
+        <h2>Yaman's Secret pics</h2>
+        <ul class="box-list">
+            <li><a href="images/yaman.jpg">Cigarette</a></li>
+        </ul>
+    </div>
 </body>
 </html>
