--- a/yaman.html
+++ b/yaman.html
@@ -63,12 +63,16 @@
             <li><a href="images/zaynab1.png">Zaynab 1</a></li>
             <li><a href="images/zaynab2.png">Zaynab 2</a></li>
             <li><a href="images/zaynab.png">Zaynab_GF</a></li>
+            <li><a href="images/Zaynab_GF_2.png">Zaynab_GF_2</a></li>
+            <li><a href="images/Cheater.png">Cheater</a></li>
         </ul>
     </div>
     <div class="box">
         <h2>Yaman's Secret pics</h2>
         <ul class="box-list">
             <li><a href="images/yaman.jpg">Cigarette</a></li>
+            <li><a href="images/Liyana.webp">Liyana</a></li>
+            <li><a href="images/Liyana2.webp">Liyana 2</a></li>
         </ul>
     </div>
 </body>
