--- a/yaman.html
+++ b/yaman.html
@@ -57,15 +57,28 @@
 </head>
 <body>
     <div class="box">
-        <h2>Yaman's Chats</h2>
+        <h2>Yaman and Zaynab Chats</h2>
         <ul class="box-list">
-            <li><a href="yaman/Jannat.png">Jannat</a></li>
-            <li><a href="yaman/zaynab1.png">Zaynab 1</a></li>
-            <li><a href="yaman/zaynab2.png">Zaynab 2</a></li>
             <li><a href="yaman/zaynab.png">Zaynab_GF</a></li>
             <li><a href="yaman/Zaynab_GF_2.png">Zaynab_GF_2</a></li>
             <li><a href="yaman/Zaynab_GF_3.png">Zaynab_GF_3</a></li>
             <li><a href="yaman/Zaynab_GF_4.png">Zaynab_GF_4</a></li>
+        </ul>
+    </div>
+    <div class="box">
+        <h2>Yaman and Rivi Chats</h2>
+        <ul class="box-list">
+            <li><a href="yaman/Rivi_1.png">Rivi_1</a></li>
+            <li><a href="yaman/Rivi_2.png">Rivi_2</a></li>
+            <li><a href="yaman/Rivi_3.png">Rivi_3</a></li>
+        </ul>
+    </div>
+    <div class="box">
+        <h2>Yaman's other Chats</h2>
+        <ul class="box-list">
+            <li><a href="yaman/Jannat.png">Jannat</a></li>
+            <li><a href="yaman/zaynab1.png">Zaynab 1</a></li>
+            <li><a href="yaman/zaynab2.png">Zaynab 2</a></li>
             <li><a href="yaman/Cheater.png">Cheater</a></li>
         </ul>
     </div>
